--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && cp -r build/* docs/.",
+    "build": "PUBLIC_URL=https://josefbud.github.io/d2-runewords react-scripts build && cp -r build/* docs/.",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
