--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-lazyload": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -22,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "PUBLIC_URL=https://josefbud.github.io/d2-runewords react-scripts build && cp -r build/* docs/.",
+    "build:local": "PUBLIC_URL=http://127.0.0.1:5500/docs react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
